# project_webscraping

./: Dockerfile  README.md  app.py  config.py  database.py  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  scraper.py  telegram_bot.py
